[gd_scene load_steps=6 format=3 uid="uid://df7d547e3a8aq"]

[ext_resource type="Script" path="res://Scripts/transition_screen.gd" id="1_dj1q1"]
[ext_resource type="Shader" path="res://Resources/Magic.gdshader" id="2_7ad8i"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vwp5g"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vreuf"]
seamless = true
noise = SubResource("FastNoiseLite_vwp5g")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rae0m"]
shader = ExtResource("2_7ad8i")
shader_parameter/speed = 0.1
shader_parameter/threshold = 0.65
shader_parameter/noise_texture = SubResource("NoiseTexture2D_vreuf")

[node name="TransitionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dj1q1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_rae0m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fun" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -412.0
offset_top = -208.0
offset_right = 420.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleText" type="Label" parent="Fun"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "FUN FACT! YOU DIED EDITION!
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Fact" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -412.0
offset_top = -104.0
offset_right = 420.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="FactText" type="Label" parent="Fact"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "There is at least 1 species of banana slugs found in the State of California.
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = -208.0
offset_right = -120.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Press any key to continue."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
